--- a/index.html
+++ b/index.html
@@ -76,12 +76,9 @@
                                 <img src="./images/instagram-100.png" alt="instagram">
                             </li>
                         </ul>
-                        <!-- <div class="nav_icon">
-                            <img src="./images/instagram-100.png" alt="instagram">
-                        </div> -->
                     </div>
                     <div class="top_scroll">
-                        <span class="mgr-10">scroll</span>down
+                        <span class="mgr-20">scroll</span>down
                     </div>
                 </div>
             </header>
@@ -339,7 +336,7 @@
                     <img src="./images/pc_footer-100.png" alt="tree">
                 </picture>
                 <div class="copyright">
-                    ©️ OKAZAKI YUMIKO PORTFORIO SITE
+                    <span class="mgr-20">©️ OKAZAKI YUMIKO</span>PORTFOLIO SITE
                 </div>
             </footer>
         </section>
