--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 <picture class="service_img">
                     <img class="pc_service_img" src="./images/pc_service-100.png" alt="service_photo">
                 </picture>
-                <!-- <div class="gradation">
-                </div> -->
+                <div class="gradation">
+                </div>
                 <div class="portfolio_menu">
                     <div class="menu_title">
                         service
