--- a/works_content-01.html
+++ b/works_content-01.html
@@ -9,34 +9,118 @@
 </head>
 
 <body>
+    <header id="works_list_portfolio_top">
+        <div class="portfolio_top01">
+            <picture class="portfolio_tree">
+                <img src="./images/pc_top_tree-100.png" alt="tree">
+            </picture>
+            <div class="portfolio_title">
+                <h1 class="portfolio_title01">
+                    OKAZAKI YUMIKO
+                </h1>
+                <h2 class="portfolio_title02">
+                    PORTFOLIO SITE
+                </h2>
+            </div>
+        </div>
+
+        <div class="portfolio_top02">
+            <ul class="nav_list">
+                <li class="nav_list_text">
+                    <a href="index.html#portfolio_top">
+                        home
+                    </a>
+                </li>
+                <li class="nav_list_text">
+                    <a href="index.html#service_contents">
+                        service
+                    </a>
+                </li>
+                <li class="nav_list_text">
+                    <a href="index.html#works_contents">
+                        works
+                    </a>
+                </li>
+                <li class="nav_list_text">
+                    <a href="index.html#about_contents">
+                        about
+                    </a>
+                </li>
+                <li class="nav_list_text">
+                    <a href="index.html#contact_contents">
+                        contact
+                    </a>
+                </li>
+                <li class="nav_icon">
+                    <img src="./images/instagram-100.png" alt="instagram">
+                </li>
+            </ul>
+        </div>
+    </header>
+
+    <section class="works_title">
+        <p class="works_title-main">
+            works
+        </p>
+        <p class="works_list-sub">
+            制作実績
+        </p>
+    </section>
+
     <section class="works_wrapper01">
         <div class="works_img">
-            <img class="works_img01" src="./images/pc_works_burger1(sp)-100.png" alt="burger1">
-            <img class="works_img02" src="./images/pc_works_burger2(sp)-100.png" alt="burger2">
+            <div class="works_img01">
+                <img src="./images/pc_works_burger1(sp)-100.png" alt="burger1">
+                高級Ver
+            </div>
+            <div class="works_img02">
+                <img src="./images/pc_works_burger2(sp)-100.png" alt="burger2">
+                POPVer
+            </div>
         </div>
 
         <div class="works_content">
-            <div class="category">
-                カテゴリー～
-            </div>
-            <div class="role">
-                担当範囲～
-            </div>
-            <div class="tool">
-                使用ツール～
-            </div>
-            <div class="period">
-                制作期間～
-            </div>
-            <div class="text">
-                テキストテキストテキストテキスト
-            </div>
+            <ul class="works_box">
+                <li class="category">
+                    カテゴリー<span class="category_content-mg">テキストテキストテキストテキスト</span>
+                </li>
+                <li class="role">
+                    担当範囲<span class="role_content-mg">テキストテキストテキストテキスト</span>
+                </li>
+                <li class="tool">
+                    使用ツール<span class="tool_content-mg">テキストテキストテキストテキスト</span>
+                </li>
+                <li class="period">
+                    制作期間<span class="period_content-mg">テキストテキストテキストテキスト</span>
+                </li>
+                <li class="text">
+                    テキストテキストテキストテキスト
+                </li>
+            </ul>
         </div>
     </section>
 
     <section class="works_wrapper02">
         <img src="./images/burger1-banner.jpg" alt="burger1-banner">
         <img src="./images/burger2-banner.jpg" alt="burger2-banner">
+    </section>
+
+    <section class="contact">
+        <p class="contact_text">
+            制作のご依頼やご相談、ご不明点がございましたらお気軽にお問い合わせください。<br>
+            通常3日以内に返信させていただきます。
+        </p>
+        <div class="contact_btn">
+            <a href="index.html#contact_contents">
+                contact
+            </a>
+        </div>
+        <h2 class="copyright">
+            <span class="mgr-20">©️ OKAZAKI YUMIKO</span>PORTFOLIO SITE
+        </h2>
+        <picture class="bottom_img">
+            <img class="bottom_tree" src="./images/pc_woks_bottom.png" alt="tree">
+        </picture>
     </section>
 
 </body>
