--- a/works_list.html
+++ b/works_list.html
@@ -69,6 +69,8 @@
 
     <section class="works_container">
         <div class="works_wrapper">
+            <div class="gradation">
+            </div>
             <div class="works01">
                 <img class="pc_img" src="./images/pc_works_hair design-100.png" alt="美容室LP">
                 <div class="works_service">
@@ -94,6 +96,8 @@
         </picture>
 
         <div class="works_wrapper02">
+            <div class="gradation">
+            </div>
             <div class="works03">
                 <img class="banner_img" src="./images/pc_works_burger-100.png" alt="新商品 告知バナー">
                 <div class="works_service">
@@ -114,6 +118,8 @@
             </div>
         </div>
         <div class="works_wrapper">
+            <div class="gradation">
+            </div>
             <div class="works05">
                 <img class="pc-tablet-sp_img" src="./images/pc_works_workers-100.png" alt="コワーキングスペースLP">
                 <div class="works_service">
@@ -139,6 +145,8 @@
         </picture>
 
         <div class="works_wrapper02">
+            <div class="gradation">
+            </div>
             <div class="works07">
                 <img class="banner_img" src="./images/東京おすすめスポット.png" alt="Webメディアアイキャッチ">
                 <div class="works_service">
@@ -166,9 +174,9 @@
             通常3日以内に返信させていただきます。
         </p>
         <div class="contact_btn">
-            <div>
+            <a href="index.html#contact_contents">
                 contact
-            </div>
+            </a>
         </div>
         <h2 class="copyright">
             <span class="mgr-20">©️ OKAZAKI YUMIKO</span>PORTFOLIO SITE
