--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     </div> -->
                     <form
                         action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeERXSf-t-3XfI7QljaYylwZDVXWyuqm7Dw4Tr-Fl3aa2qBiw/formResponse"
-                        method="POST" class="c-form">
+                        method="POST" target="hidden_iframe" onsubmit="submitted=true;" class="c-form">
                         <div class="c-form_item">
                             <label class="c-form_label" for="field-name">
                                 名前<span class="c-form_required">必須</span>
@@ -383,7 +383,11 @@
             </footer>
         </section>
     </main>
-
+    <script type="text/javascript">
+        let submitted = false;
+    </script>
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display: none"
+        onload="if(submitted){window.location='./thanks.html';}"></iframe>
     <script src="
 https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js
 "></script>
