--- a/works_content-02.html
+++ b/works_content-02.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>works_content-01</title>
-    <link rel="stylesheet" href="./css/works_content-pc.css">
+    <title>works_content-02</title>
+    <link rel="stylesheet" href="./css/works_content-pc_sp.css">
 </head>
 
 <body>
@@ -69,39 +69,38 @@
 
     <section class="works_wrapper01">
         <div class="works_img">
-            <img src="./images/pc_works_hair design-100.png" alt="hair design">
+            <img src="./images/pc_works_design cafe-100.png" alt="design cafe">
         </div>
 
         <div class="works_content">
             <ul class="works_box">
                 <li>
                     <span class="item">カテゴリー</span>
-                    <span class="item_text">LP ランディングページ</span>
+                    <span class="item_text">コーポレートサイト</span>
                 </li>
                 <li>
                     <span class="item">担当範囲</span>
-                    <span class="item_text">素材選定、デザイン</span>
+                    <span class="item_text">コーディング</span>
                 </li>
                 <li>
                     <span class="item">使用ツール</span>
-                    <span class="item_text">Illustrator、Photoshop</span>
+                    <span class="item_text">HTML、CSS、jQuery</span>
                 </li>
                 <li>
                     <span class="item">制作期間</span>
                     <span class="item_text">2週間</span>
                 </li>
                 <li class="text">
-                    コーポレートカラーのピンクを基調に
-                    背景に流体シェイプを使用することで、
-                    ターゲット層である女性に向けた
-                    柔らかく優しい印象のお店を表現しました。
+                    レスポンシブに対応したデザインサイトをコーディングしました。
+                    jQuery使用しGALLERYの写真をスライダー表示させています。
                 </li>
             </ul>
         </div>
     </section>
 
     <section class="works_wrapper02">
-        <img src="./images/kadai5_okazaki-yumiko.jpg" alt="hair design">
+        <img class="img_pc" src="./images/W1920_PC-80.jpg" alt="design cafe_pc">
+        <img class="img_sp" src="./images/W375_スマホ-80.jpg" alt="design cafe_sp">
     </section>
 
     <section class="contact">
