--- a/works_content-03.html
+++ b/works_content-03.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>works_content-01</title>
-    <link rel="stylesheet" href="./css/works_content-pc.css">
+    <title>works_content-03</title>
+    <link rel="stylesheet" href="./css/works_content-sp2.css">
 </head>
 
 <body>
@@ -69,39 +69,45 @@
 
     <section class="works_wrapper01">
         <div class="works_img">
-            <img src="./images/pc_works_hair design-100.png" alt="hair design">
+            <div class="works_img01">
+                <img src="./images/pc_works_burger1(sp)-100.png" alt="burger1">
+                高級Ver
+            </div>
+            <div class="works_img02">
+                <img src="./images/pc_works_burger2(sp)-100.png" alt="burger2">
+                POPVer
+            </div>
         </div>
 
         <div class="works_content">
             <ul class="works_box">
                 <li>
                     <span class="item">カテゴリー</span>
-                    <span class="item_text">LP ランディングページ</span>
+                    <span class="item_text">Web広告バナー</span>
                 </li>
                 <li>
                     <span class="item">担当範囲</span>
-                    <span class="item_text">素材選定、デザイン</span>
+                    <span class="item_text">素材選定 / デザイン</span>
                 </li>
                 <li>
                     <span class="item">使用ツール</span>
-                    <span class="item_text">Illustrator、Photoshop</span>
+                    <span class="item_text">Illustrator, Photoshop</span>
                 </li>
                 <li>
                     <span class="item">制作期間</span>
-                    <span class="item_text">2週間</span>
+                    <span class="item_text">5日</span>
                 </li>
                 <li class="text">
-                    コーポレートカラーのピンクを基調に
-                    背景に流体シェイプを使用することで、
-                    ターゲット層である女性に向けた
-                    柔らかく優しい印象のお店を表現しました。
+                    ハンバーガーの素材は同じものを使用し、お肉のシズル感をPhotoshopで再現しました。
+                    また、色使いやフォント、余白で「高級感」「POP」をそれぞれ表現しています。
                 </li>
             </ul>
         </div>
     </section>
 
     <section class="works_wrapper02">
-        <img src="./images/kadai5_okazaki-yumiko.jpg" alt="hair design">
+        <img src="./images/burger1-banner.jpg" alt="burger1-banner">
+        <img src="./images/burger2-banner.jpg" alt="burger2-banner">
     </section>
 
     <section class="contact">
@@ -115,7 +121,7 @@
             </a>
         </div>
         <div class="contact-back_btn">
-            <a href="works_list.html#works_wrapper-01">
+            <a href="works_list.html#works_wrapper-02">
                 back
             </a>
         </div>
