--- a/works_content-05.html
+++ b/works_content-05.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>works_content-01</title>
-    <link rel="stylesheet" href="./css/works_content-pc.css">
+    <title>works_content-05</title>
+    <link rel="stylesheet" href="./css/works_content-pc_sp.css">
 </head>
 
 <body>
@@ -69,7 +69,7 @@
 
     <section class="works_wrapper01">
         <div class="works_img">
-            <img src="./images/pc_works_hair design-100.png" alt="hair design">
+            <img src="./images/pc_works_workers-100.png" alt="workers">
         </div>
 
         <div class="works_content">
@@ -80,28 +80,26 @@
                 </li>
                 <li>
                     <span class="item">担当範囲</span>
-                    <span class="item_text">素材選定、デザイン</span>
+                    <span class="item_text">デザイン（トレース）</span>
                 </li>
                 <li>
                     <span class="item">使用ツール</span>
-                    <span class="item_text">Illustrator、Photoshop</span>
+                    <span class="item_text">illustrator</span>
                 </li>
                 <li>
                     <span class="item">制作期間</span>
-                    <span class="item_text">2週間</span>
+                    <span class="item_text">2日</span>
                 </li>
                 <li class="text">
-                    コーポレートカラーのピンクを基調に
-                    背景に流体シェイプを使用することで、
-                    ターゲット層である女性に向けた
-                    柔らかく優しい印象のお店を表現しました。
+                    モチーフカラーを黄色にすることで快活で明るい雰囲気を表現し、丸みのあるイラストから利用者に安心感を与えられるデザインを目指しました。
                 </li>
             </ul>
         </div>
     </section>
 
     <section class="works_wrapper02">
-        <img src="./images/kadai5_okazaki-yumiko.jpg" alt="hair design">
+        <img class="img_pc" src="./images/kadai04_pc.jpg" alt="workers_pc">
+        <img class="img_sp" src="./images/kadai04_sp.jpg" alt="workers_sp">
     </section>
 
     <section class="contact">
@@ -115,7 +113,7 @@
             </a>
         </div>
         <div class="contact-back_btn">
-            <a href="works_list.html#works_wrapper-01">
+            <a href="works_list.html#works_wrapper-03">
                 back
             </a>
         </div>
