--- a/works_content-04.html
+++ b/works_content-04.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>works_content-01</title>
-    <link rel="stylesheet" href="./css/works_content-pc.css">
+    <title>works_content-04</title>
+    <link rel="stylesheet" href="./css/works_content-sp1.css">
 </head>
 
 <body>
@@ -69,39 +69,39 @@
 
     <section class="works_wrapper01">
         <div class="works_img">
-            <img src="./images/pc_works_hair design-100.png" alt="hair design">
+            <img src="./images/mobile plan-100.png" alt="mobile plan">
         </div>
 
         <div class="works_content">
             <ul class="works_box">
                 <li>
                     <span class="item">カテゴリー</span>
-                    <span class="item_text">LP ランディングページ</span>
+                    <span class="item_text">Web広告バナー</span>
                 </li>
                 <li>
                     <span class="item">担当範囲</span>
-                    <span class="item_text">素材選定、デザイン</span>
+                    <span class="item_text">デザイン（トレース）</span>
                 </li>
                 <li>
                     <span class="item">使用ツール</span>
-                    <span class="item_text">Illustrator、Photoshop</span>
+                    <span class="item_text">Illustrator, Photoshop</span>
                 </li>
                 <li>
                     <span class="item">制作期間</span>
-                    <span class="item_text">2週間</span>
+                    <span class="item_text">1日</span>
                 </li>
                 <li class="text">
-                    コーポレートカラーのピンクを基調に
-                    背景に流体シェイプを使用することで、
-                    ターゲット層である女性に向けた
-                    柔らかく優しい印象のお店を表現しました。
+                    スマートフォンを持つ手元をPhotoshopで切り抜き、
+                    春を連想させるピンク色の背景に合成しています。
+                    また、Illustratorで桜の花びらを作成し、
+                    「春限定」が目立つように工夫しました。
                 </li>
             </ul>
         </div>
     </section>
 
     <section class="works_wrapper02">
-        <img src="./images/kadai5_okazaki-yumiko.jpg" alt="hair design">
+        <img src="./images/kadai01_okazaki yumiko.jpg" alt="mobile plan">
     </section>
 
     <section class="contact">
@@ -115,7 +115,7 @@
             </a>
         </div>
         <div class="contact-back_btn">
-            <a href="works_list.html#works_wrapper-01">
+            <a href="works_list.html#works_wrapper-02">
                 back
             </a>
         </div>
