--- a/works_list.html
+++ b/works_list.html
@@ -169,8 +169,12 @@
     </section>
 
     <section class="contact">
-        <p class="contact_text">
+        <p class="pc_contact_text">
             制作のご依頼やご相談、ご不明点がございましたらお気軽にお問い合わせください。<br>
+            通常3日以内に返信させていただきます。
+        </p>
+        <p class="sp_contact_text">
+            制作のご依頼やご相談、ご不明点がございましたら<br>お気軽にお問い合わせください。<br>
             通常3日以内に返信させていただきます。
         </p>
         <div class="contact_btn">
@@ -180,10 +184,13 @@
         </div>
         <h2 class="copyright">
             <span class="mgr-20">©️ OKAZAKI YUMIKO</span>PORTFOLIO SITE
+            <picture class="bottom_img">
+                <img class="bottom_tree" src="./images/pc_woks_bottom.png" alt="tree">
+            </picture>
         </h2>
-        <picture class="bottom_img">
+        <!-- <picture class="bottom_img">
             <img class="bottom_tree" src="./images/pc_woks_bottom.png" alt="tree">
-        </picture>
+        </picture> -->
     </section>
 
 </body>
