--- a/index.html
+++ b/index.html
@@ -377,6 +377,12 @@
                         お気軽にお問い合わせください。<br>
                         通常3日以内に返信させていただきます。
                     </div>
+                    <div class="sp_menu_text">
+                        ここまでお読みいただきありがとうございます。
+                        制作のご依頼やご相談、ご不明点がございましたら
+                        お気軽にお問い合わせください。
+                        通常3日以内に返信させていただきます。
+                    </div>
                 </div>
                 <div class="customer-info">
 
